# routes/api.php
@@ -8,6 +8,7 @@ use App\Http\Controllers\ListAttractionsByComedianNameController;
 use App\Http\Controllers\ListAttractionsByPlaceController;
 use App\Http\Controllers\ListAttractionsByComedianController;
 use App\Http\Controllers\ListAttractionsByLocationController;
+use App\Http\Controllers\RegisterAttractionController;
 use App\Http\Controllers\UnFollowComedianController;
 use Illuminate\Support\Facades\Route;
 
@@ -30,5 +31,7 @@ Route::prefix('v1')->group(function () {
     Route::get('attractions/{place}',  [ListAttractionsByPlaceController::class, 'handle']);
     Route::get('attractions/comedian/{comedianId}',  [ListAttractionsByComedianController::class, 'handle']);
     Route::get('attractions/comedian/name/{comedianName}',  [ListAttractionsByComedianNameController::class, 'handle']);
+
+    Route::post('attractions',  [RegisterAttractionController::class, 'handle']);
 
 });
